<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_LoggerNode" Id="{b56b6f89-5e19-42c9-aa25-77242f785d37}">
    <Declaration><![CDATA[{attribute 'enable_dynamic_creation'}
TYPE ST_LoggerNode :
STRUCT
	iLogger:			I_Logger;
	pNext: 				POINTER TO ST_LoggerNode;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>